added styled-components and react-router

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "concurrently \"cd root/server && npm run dev\" \"cd root/client && npm start\" "
   },
   "author": "",
   "license": "ISC",
